# Neobis_Auth_Project

./: .env.dev  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
drfauthproject/: asgi.py  settings.py  urls.py  wsgi.py
users/: urls.py
