[tool.poetry]
name = "neobis-auth-project"
version = "0.1.0"
description = ""
authors = ["uluk001 <ulukmanmuratov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "^3.8.1"
certifi = "^2024.8.30"
cffi = "^1.17.1"
charset-normalizer = "^3.4.0"
cryptography = "^44.0.0"
defusedxml = "^0.7.1"
dj-rest-auth = "^7.0.0"
django = "^5.1.3"
django-allauth = "^65.3.0"
django-cors-headers = "^4.6.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.8"
idna = "^3.10"
inflection = "^0.5.1"
oauthlib = "^3.2.2"
packaging = "^24.2"
psycopg2-binary = "^2.9.10"
pycparser = "^2.22"
pyjwt = "^2.10.1"
python-decouple = "^3.8"
python3-openid = "^3.2.0"
pytz = "^2024.2"
pyyaml = "^6.0.2"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
sqlparse = "^0.5.2"
typing-extensions = "^4.12.2"
uritemplate = "^4.1.1"
urllib3 = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
